# DevToolsTranslator

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  registry.v1.json  tsconfig.base.json
.codex/: verify.commands
.github/workflows/: perf-reliability-regression.yml  release-extension-public.yml  release-extension-stage-controller.yml  release-internal-beta.yml  release-staged-public-prerelease.yml
apps/extension-mv3/: manifest.json  package.json  tsconfig.json
config/: detectors.v1.json  llm.fingerprints.v1.json  patterns.console.v1.json  perf.thresholds.v1.json  telemetry.filters.v1.json
config/compliance/: extension_public_checklist.v1.json
config/release/: extension_public_rollout.v1.json  extension_rollout_policy.v2.json
crates/dtt-core/: Cargo.toml
crates/dtt-correlation/: Cargo.toml
crates/dtt-detectors/: Cargo.toml
crates/dtt-export/: Cargo.toml
crates/dtt-integrity/: Cargo.toml
docs/: ARCHITECTURE.md  DATA_MODEL.md  DETECTORS.md  EXPORTS.md  IMPLEMENTATION_PLAN.md  INCIDENT_RUNBOOK.md  PHASE10_RELEASE_REPORT.md  PHASE11_IMPLEMENTATION_REPORT.md  PHASE12_RELEASE_PROMOTION_REPORT.md  PHASE13_PUBLIC_CHANNEL_REPORT.md  PHASE14_ROLLOUT_AUTOMATION_REPORT.md  PHASE6_SMOKE_EVIDENCE.md  PHASE7_UI_IMPLEMENTATION.md  PHASE8_READINESS.md  PHASE9_HARDENING_REPORT.md  PRODUCT.md  RELEASE_RUNBOOK.md  REPO_STRUCTURE.md  RFC_beginner_mode_ux_contract.md  RFC_installer_first_launch.md  RFC_llm_regen_correlation.md  RFC_pairing_v2_user_friendly.md  SPEC_LOCK.md  TEST_PLAN.md  UX_SPECS.md
(+118 files in other folders)
